<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="compass">Compass</string>
    <string name="orientation">Orientation</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="light">Light</string>
    <string name="temperature">Temperature</string>
</resources>
