<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="learning.kaelsoftware.myapplication.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:weightSum="6">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="gotoAccelerator"
            android:text="@string/accelerometer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="gotoCompass"
            android:text="@string/compass" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="gotoOrientation"
            android:text="@string/orientation" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="gotoGyroscope"
            android:text="@string/gyroscope" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="gotoLight"
            android:text="@string/light" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="gotoTemperature"
            android:text="@string/temperature" />
    </LinearLayout>

</RelativeLayout>
